<resources>
    <string name="app_name">MyKotlinApp</string>
    <string name="wybierz_metod_sortowania">Wybierz metodę sortowania</string>
    <string name="wynik">Wynik</string>
    <string name="sortuj">Sortuj</string>
    <string name="wpisz_liczby">Wpisz liczby</string>
    <string name="opis_dzialania">Opis działania</string>
    <string name="czas_sortowania">Czas sortowania:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_b">Fragment B</string>
</resources>