<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


        <TextView
            android:id="@+id/start_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Początkowy ciąg:"
            android:textColor="@color/text_small"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wynik"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:id="@+id/result_tv"
            android:gravity="center"/>

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:gravity="center"
            android:text="@string/opis_dzialania"
            android:textSize="18sp"
            android:textColor="@color/text_small"/>
        <TextView
            android:gravity="center"
            android:id="@+id/time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/czas_sortowania"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button

            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="Udostępnij"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortedDataTv" />

</LinearLayout>